cmake_minimum_required(VERSION 3.12)
project(NodeLib)
set(CMAKE_CXX_STANDARD 14)
add_executable(N-API-Example lib/main.cpp lib/include/main.h)
include_directories(node_modules/node-addon-api)
include_directories(node_modules/node-addon-api/src)
include_directories(${CMAKE_JS_INC})
file(GLOB SOURCE_FILES "src/*.cc" "src/*.h")
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})